Updated comments-modal css to stop title overlap

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -176,6 +176,11 @@
   margin: 0 auto;
 }
 
+.comments-modal > .bar .title {
+  left: 97px;
+  right: 97px;
+}
+
 .comments {
   margin: 0;
   padding: 0;
